--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free-brands": "^5.0.7",
         "bulma": "^0.6.2"
     }
 }
