--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free-brands": "^5.0.7",
-        "bulma": "^0.6.2"
+        "bulma": "^0.6.2",
+        "jssocials": "^1.5.0"
     }
 }
