--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free-brands": "^5.0.7",
+        "@fortawesome/fontawesome": "^1.1.4",
+        "@fortawesome/fontawesome-free-brands": "^5.0.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.8",
         "bulma": "^0.6.2",
+        "bulma-pageloader": "^1.0.1",
         "jssocials": "^1.5.0"
     }
 }
