--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/fontawesome-free-solid": "^5.0.8",
         "bulma": "^0.6.2",
         "bulma-pageloader": "^1.0.1",
-        "jssocials": "^1.5.0"
+        "jssocials": "^1.5.0",
+        "lightbox2": "^2.10.0"
     }
 }
